--- a/springdata/build.gradle
+++ b/springdata/build.gradle
@@ -28,8 +28,8 @@ repositories {
 }
 
 dependencies {
-	compile("org.springframework.boot:spring-boot-starter-web")
-	compile('org.springframework.boot:spring-boot-starter-data-jpa')
+	compile("org.springframework.boot:spring-boot-starter-web:1.1.10-RELEASE")
+	compile('org.springframework.boot:spring-boot-starter-data-jpa:1.1.10-RELEASE')
 	compile('mysql:mysql-connector-java:5.1.34')
-	testCompile("junit:junit")
+	testCompile("junit:junit:4.11")
 }
